tests/ui/parser/let-outside-function.stderr
error: `let` is invalid outside of a function
  --> $DIR/let-outside-function.rs:1:1
   |
LL | let a = 1;
   | ^^^
   |
help: consider using `static` instead of `let`
   |
LL | static a = 1;
   | ~~~~~~
help: consider using `const` instead of `let`
   |
LL | const a = 1;
   | ~~~~~

error: aborting due to previous error

