tests/ui/parser/let-outside-function.rs
let a = 1;
//~^ ERROR `let` is invalid outside of a function

fn main() {
}
